# tables

./: README.md  pyproject.toml  requirements.txt  setup.py  todo.md
src/tables/: __init__.py  index.py  table.py  utils.py
src/tables/custom_indexes/: __init__.py  wiki.py
src/tables/custom_tables/: __init__.py  annotation.py  autosave.py  bookmark.py  hash.py  joke.py  jumper.py  metadata.py  part.py  pomodoro.py  quickmark.py  quote.py
tables/: tables.py
tables/custom_tables/: __init__.py  bookmark.py  hash.py
tables/custom_tables/todo/: cite.py
tables/utils/: __init__.py  ref_parser.py  utils.py
todo/: __init__.py  table.py  utils.py
todo/custom_tables/: hash.py  metadata.py  quote.py
