[build-system]

requires=["setuptools"]
build-backend="setuptools.build_meta"

[project]

name="tables"
version="0.0.1"
description="Temporary SQLite helper"
dependencies=[
	"pypdf==3.1.0",
	"summa==1.2.0",
	"whoosh==2.7.4",
	"requests==2.28.2",
	"pdftotext==2.2.2",
	"bibtexparser==1.4.0",
	"fake_useragent==1.1.3",
	"beautifulsoup4==4.12.2",
	]

[tools.setuptools.packages.find]

where=["src"]
